// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConformerGenerator should generate conformers 1`] = `
"
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
    0.0209   -2.5358    6.9912 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.4019   -1.6934    5.6364 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.2666   -0.0439    5.7657 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.7123    0.7908    4.2081 C   0  0  0  0  0  0  0  0  0  0  0  0
   -0.4234    0.4480    3.0453 O   0  0  0  0  0  0  0  0  0  0  0  0
   -0.1832    1.1036    1.6138 N   0  0  0  0  0  0  0  0  0  0  0  0
   -0.9350   -2.1387    7.5082 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.8873   -2.5457    7.7647 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.1686   -3.6460    6.6492 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.8241    0.2442    6.0545 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.9037    0.3671    6.6327 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.7892    1.9248    4.3812 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.7629    0.4125    3.8524 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.7009    0.8284    1.1579 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.9561    0.8636    0.9815 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;

exports[`ConformerGenerator should generate conformers 2`] = `
"
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
    1.9089   -2.2937    5.8792 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.4019   -1.6934    5.6364 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.2666   -0.0439    5.7657 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.7123    0.7908    4.2081 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.5603    2.4347    4.3914 O   0  0  0  0  0  0  0  0  0  0  0  0
    1.7021    3.1562    5.2356 N   0  0  0  0  0  0  0  0  0  0  0  0
    2.4428   -1.8047    6.7817 H   0  0  0  0  0  0  0  0  0  0  0  0
    2.5852   -2.1850    4.9413 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.7771   -3.4431    6.0962 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.8241    0.2442    6.0545 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.9037    0.3671    6.6327 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.7868    0.5114    3.9093 H   0  0  0  0  0  0  0  0  0  0  0  0
   -0.0017    0.4248    3.3540 H   0  0  0  0  0  0  0  0  0  0  0  0
    2.6525    3.0566    4.8460 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.4966    4.1586    5.3228 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;
